--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,18 @@
           <%= link_to "Schmerztagebuch", root_path, id: "logo" %>
           <nav>
             <ul class="nav pull-right">
-              <li><%= link_to "Home",    '#' %></li>
+              <li><%= link_to "Benutzer", users_path %></li>
               <li><%= link_to "Neuer Eintrag", new_pain_path %></li>
+              <li><%= link_to "Registrieren", register_path %></li>
               <li><%= link_to "Sign in", '#' %></li>
             </ul>
           </nav>
         </div>
       </div>
     </header>
+    <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>"><%= value %></div>
+    <% end %>
     <div class="container">
       <%= yield %>
     </div>
