--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -5,8 +5,9 @@
       %nav
         %ul.nav.pull-right
           %li= link_to "Home", root_path
-          %li= link_to "Profil", current_user
           - if logged_in?
+            %li= link_to "Profil", current_user
+            %li= link_to "Einstellungen", edit_user_path(current_user)
             %li= link_to "Log out", logout_path, method: "delete"
           - else
             %li= link_to "Registrieren", register_path
