--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,7 +1,7 @@
-%header.navbar.navbar-fixed-top.navbar-inverse
+%header.navbar.navbar-fixed-top
   .navbar-inner
     .container
-      #logo= link_to "Schmerztagebuch", root_path
+      #logo= link_to "Medical Diary", root_path
       %nav
         %ul.nav.pull-right
           %li= link_to "Home", root_path
