--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -6,9 +6,12 @@
         %ul.nav.pull-right
           %li= link_to "Home", root_path
           - if logged_in?
-            %li= link_to "Profil", current_user
-            %li= link_to "Einstellungen", edit_user_path(current_user)
+            - if can? :edit, current_user
+              %li= link_to current_user.name, edit_user_path(current_user)
             %li= link_to "Log out", logout_path, method: "delete"
+            - if current_user.role == 'admin'
+              %li= link_to "(admin)", users_path
+
           - else
             %li= link_to "Registrieren", register_path
             %li= link_to "Log in", login_path
