--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -15,4 +15,4 @@
       %td= user.role
       %td
         = link_to t(:edit), edit_user_path(user.id)
-        = link_to t(:delete), user, method: :delete, data: { confirm: t(:are_you_sure?) }
+        = link_to t(:delete), user, method: :delete
