--- a/app/assets/stylesheets/pains.css.scss
+++ b/app/assets/stylesheets/pains.css.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the pains controller here.
+// Place all the styles related to the Pains controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
