--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,3 +1,7 @@
 - provide(:title, "Benutzerdaten von #{@user.name} bearbeiten")
-%h1= "Benutzerdaten von #{@user.name} bearbeiten"
-=render "form"
+.row
+  .span7
+    %h1= "#{@user.name}s Daten bearbeiten"
+    =render "form"
+  .span5.greybox
+    = render "shared/sidebar"
