--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,9 @@
 - provide(:title, @user.name)
-%h1= @user.name
-%p= @user.email
-=link_to "Benutzerdaten bearbeiten", edit_user_path(@user.id)
+.row
+  .span7
+    %h1= @user.name
+    %p= @user.email
+    =link_to "Benutzerdaten bearbeiten", edit_user_path(@user.id)
+  .span5.greybox
+    = render "shared/sidebar"
+
