--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,15 +36,16 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 2em;
-  letter-spacing: -2px;
-  margin-bottom: 30px;
+  letter-spacing: -1px;
+  margin-bottom: 20px;
   color: $grayLight;
+  font-weight: normal;
 }
 
 h2 {
   font-size: 1.7em;
   letter-spacing: -1px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   font-weight: normal;
   color: $grayLight;
 }
@@ -52,6 +53,7 @@ h2 {
 p {
   font-size: 1.1em;
   line-height: 1.7em;
+  margin-bottom: 30px;
 }
 
 /* header */
