added pain_entries and did some little fixes to the scaffold. erb still to be undane and form to be made usable. Time Span not yet applied

--- a/app/views/shared/_sidebar.html.haml
+++ b/app/views/shared/_sidebar.html.haml
@@ -8,7 +8,7 @@
       %th
       
   %tbody
-    - @user.pains.each do |pain|
+    - current_user.pains.each do |pain|
       %tr  
         %td=link_to pain.name, pain_path(pain)
         %td=link_to t(:edit), edit_pain_path(pain)
