--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,7 +12,7 @@ $grayMediumLight: #eaeaea;
 html {
   overflow-y: scroll;
 }
-body {
+body {  
   padding-top: 60px;
 }
 section {
@@ -67,6 +67,7 @@ p {
   padding-top: 9px;
   font-weight: bold;
   line-height: 1;
+  color: blue;
 }
 
 #logo:hover a{
