--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -10,7 +10,7 @@
                 Neuer Eintrag
                 %b.caret
               %ul.dropdown-menu.fat-menu
-                %li= link_to "Schmerz"
+                %li= link_to "Schmerz", new_pain_entry_path
                 %li= link_to "Ernährung"
                 %li= link_to "Stimmung"
                 %li= link_to "Tagesdaten"
