--- a/app/views/pains/_form.html.haml
+++ b/app/views/pains/_form.html.haml
@@ -1,5 +1,5 @@
 = form_for(@pain) do |f|
-  = render partial: 'shared/error_messages', item: @pain
+  = render 'shared/error_messages', item: @pain
   
   = f.label :name
   = f.text_field :name
