--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,8 +13,13 @@ $grayMediumLight: #eaeaea;
 html {
   overflow-y: scroll;
 }
-body {  
-  padding-top: 60px;
+body {
+  padding-top: 0px;
+}
+@media (min-width: 980px) {
+  body {  
+    padding-top: 60px;
+  }
 }
 section {
   overflow: auto;
@@ -62,6 +67,7 @@ p {
 #logo {
   float: left;
   margin-right: 10px;
+  margin-left: 10px;
   font-size: 1.7em;
   text-transform: uppercase;
   letter-spacing: -1px;
