--- a/app/views/pain_entries/_form.html.haml
+++ b/app/views/pain_entries/_form.html.haml
@@ -1,16 +1,22 @@
 = form_for(@pain_entry) do |f|
   = render 'shared/error_messages', item: @pain_entry
 
-  = f.label :pain_id
-  = f.number_field :pain_id
+  = f.label :body_part
+  = f.select :body_part, ["Kopf", "Nacken", "Schulter", "Oberkörper", "Brust", "Arm", "Hand", "Finger", "Bauch", "unterer Rücken", "Gesäß", "Lenden", "Hüfte", "Bein", "Knie", "Fuß", "Zehen"]
+  
+  = f.label :side
+  = f.select :side, ["beidseitig", "mitte", "rechts", "links"]
+
+  = f.label :pain_type
+  = f.select :pain_type, ["stechend", "pulsierend", "krampfartig", "juckend", "kribbelnd"]
 
   = f.label :value
   = f.range_field :value, options = { min: 0, max: 100, step: 1 }
 
   = f.label :duration
-  = f.select :duration, [:impuls, :ein_paar_minuten, :eine_stunde, :drei_stunden, :sechs_stunden, :ganztaegig]
+  = f.select :duration, ["kurzer, impulartiger Schmerz", "Ein paar Minuten", "Eine Stunde", "Zwei bis vier Stunden", "Vier bis sieben Stunden", "Ganztägig"]
 
   = f.label :comment
-  = f.text_field :comment
+  = f.text_area :comment, :rows => "5"
 
-  = f.submit
+  = f.submit "Speichern", class: "btn btn-primary btn-large"
