--- a/app/views/shared/_sidebar.html.haml
+++ b/app/views/shared/_sidebar.html.haml
@@ -1,14 +1,12 @@
-%h2= link_to "Mein Befinden letzte Woche", "#"
-%p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-%h2= link_to "Meine Schmerzarten", pains_path
-%table.table
+%h2= link_to "Meine heutigen Schmerzeinträge", pain_entries_path
+%table.table.table_striped
   %thead
     %tr
-      %th= t(:name)
+      %th Beschreibung
       %th
-      
   %tbody
-    - current_user.pains.each do |pain|
-      %tr  
-        %td=link_to pain.name, pain_path(pain)
-        %td=link_to t(:edit), edit_pain_path(pain)
+    - current_user.pain_entries.where("created_at >= ?", Time.now.beginning_of_day).each do |pain_entry|
+      -if pain_entry.updated_at.to_date == Date.today
+        %tr  
+          %td=link_to pain_description(pain_entry), pain_entry_path(pain_entry)
+          %td=link_to t(:edit), edit_pain_entry_path(pain_entry)
