--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,7 +1,7 @@
 %header.navbar.navbar-fixed-top
   .navbar-inner
     .container
-      #logo= link_to "Medical Diary", root_path, id: "Home"
+      #logo= link_to "Medizinisches Tagebuch", root_path, id: "Home"
       %nav
         %ul.nav.pull-right
           - if logged_in?
