--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,22 @@
       <% flash.each do |key, value| %>
         <div class="alert alert-<%= key %>"><%= value %></div>
       <% end %>
-      <%= yield %>
-      <%= render "layouts/footer" %>
+      <div class="row">
+        <div class="span6">
+          <%= yield %>
+        </div>
+        <% if logged_in? %>
+        <div class="span6 greybox">
+          <%= render "shared/sidebar" %>
+        </div>
+        <% end %>
+      </div>
 
+      <div class="row">
+        <div class="span12">
+          <%= render "layouts/footer" %>
+        </div>
+      </div>
     </div>
 </body>
 </html>
