--- a/app/views/pain_entries/_form.html.haml
+++ b/app/views/pain_entries/_form.html.haml
@@ -18,7 +18,7 @@
   = f.range_field :value, options = { min: 0, max: 100, step: 1 }
 
   = f.label :duration
-  = f.select :duration, ["kurzer, impulartiger Schmerz", "Ein paar Minuten", "Eine Stunde", "Zwei bis vier Stunden", "Vier bis sieben Stunden", "Ganztägig"]
+  = f.select :duration, ["impulsartig", "ein paar Minuten", "eine Stunde", "zwei bis vier Stunden", "vier bis sieben Stunden", "ganztägig"]
 
   = f.label :comment
   = f.text_area :comment, :rows => "5"
