--- a/app/views/therapy_entries/index.html.erb
+++ b/app/views/therapy_entries/index.html.erb
@@ -13,7 +13,7 @@
 
 <% @therapy_entries.each do |therapy_entry| %>
   <tr>
-    <td><%= therapy_entry.type %></td>
+    <td><%= therapy_entry.therapy_type %></td>
     <td><%= therapy_entry.intensity %></td>
     <td><%= therapy_entry.duration %></td>
     <td><%= therapy_entry.comment %></td>
