--- a/app/views/therapy_entries/new.html.erb
+++ b/app/views/therapy_entries/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New therapy_entry</h1>
+<h1>Neuer Behandlungseintrag</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', therapy_entries_path %>
