--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -49,7 +49,7 @@ h2 {
   letter-spacing: -1px;
   margin-bottom: 10px;
   font-weight: normal;
-  color: $grayLight;
+  color: #000;
 }
 
 p {
@@ -137,33 +137,49 @@ label {
   clear:both;
 }
 
-#pain_entry_occured_at{
-  width: 40%;
+#pain_entry_occured_at, #therapy_entry_occured_at{
+  width: 120px;
   float: left;
 }
-#pain_entry_date_1i{
-  width: 12%;
+#pain_entry_date_1i, #therapy_entry_date_1i{
+  clear: both;
+  width: 80px;
   float: left;
 }
-#pain_entry_date_2i {
-  width: 20%;
+#pain_entry_date_2i, #therapy_entry_date_2i {
+  width: 120px;
   float: left;
+  margin-left: 10px;
 }
-#pain_entry_date_3i  {
-  width: 10%;
+#pain_entry_date_3i, #therapy_entry_date_3i  {
+  width: 50px;
   float: left;
+  margin-left: 10px;
 }
 
 /* tables */
+td.actions {
+  width: 120px;
+  .btn {
+    float: right;
+    margin: 0 0 0 5px;
+  }
+}
+
 
 /* wells */
 .greybox {
   background: #f9f9f9;
-  padding: 10px;
   border-radius: 3px;
+  h2 {
+    clear:both;
+    margin: 20px 5px 0px;
+  }
+  .btn {
+      float: right;
+      margin: 10px 5px 20px 0px;
+  }
 }
-
-
 
 
 @media (min-width: 980px) {
