--- a/app/views/therapy_entries/new.html.erb
+++ b/app/views/therapy_entries/new.html.erb
@@ -1,3 +1,6 @@
-<h1>Neuer Behandlungseintrag</h1>
-
-<%= render 'form' %>
+<div class="row greybox">
+  <div class="span9">
+    <h1>Neuer Behandlungseintrag</h1>
+    <%= render 'form' %>
+  </div>
+</div>
