nicer describtions for pain entries 2

--- a/app/views/pain_entries/_form.html.haml
+++ b/app/views/pain_entries/_form.html.haml
@@ -12,7 +12,7 @@
   = f.select :side, ["beidseitig", "mitte", "rechts", "links"]
 
   = f.label :pain_type
-  = f.select :pain_type, ["stechend", "pulsierend", "krampfartig", "juckend", "kribbelnd"]
+  = f.select :pain_type, ["stechender Schmerz", "pulsierender Schmerz", "krampfartiger Schmerz", "Jucken", "Kribbeln", "Schwindel"]
 
   = f.label :value
   = f.range_field :value, options = { min: 0, max: 100, step: 1 }
