--- a/app/views/shared/_entries_today.html.haml
+++ b/app/views/shared/_entries_today.html.haml
@@ -11,11 +11,11 @@
           %tr  
             %td=link_to pain_description(pain_entry), pain_entry_path(pain_entry)
             %td.actions
-              =link_to t(:edit), edit_pain_entry_path(pain_entry), class: "btn btn-primary btn-mini"
-              =link_to t(:delete),  pain_entry, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-mini"
-    .buttons        
-      = link_to 'Neuer Eintrag', new_pain_entry_path, class: "btn"
-      = link_to "Übersicht", pain_entries_path, class: "btn"
+              .btn-group.pull-right
+                =link_to t(:edit), edit_pain_entry_path(pain_entry), class: "btn btn-primary btn-small"
+                =link_to t(:delete),  pain_entry, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-small"
+    .btn-group        
+      = link_to 'Neuer Eintrag', new_pain_entry_path, class: "btn btn-success"
 .row.greybox
   .span9    
     %h2= link_to "Meine heutigen Behandlungseinträge", therapy_entries_path
@@ -29,9 +29,9 @@
           %tr  
             %td=link_to therapy_entry.therapy_type, therapy_entry_path(therapy_entry)
             %td.actions
-              =link_to t(:edit), edit_therapy_entry_path(therapy_entry), class: "btn btn-primary btn-mini"
-              =link_to t(:delete),  therapy_entry, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-mini"
-    .buttons
-      = link_to 'Neuer Eintrag', new_therapy_entry_path, class: "btn"
-      = link_to "Übersicht", therapy_entries_path, class: "btn"
+              .btn-group.pull-right
+                =link_to t(:edit), edit_therapy_entry_path(therapy_entry), class: "btn btn-primary btn-small"
+                =link_to t(:delete),  therapy_entry, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-small"
+    .btn-group
+      = link_to 'Neuer Eintrag', new_therapy_entry_path, class: "btn btn-success"
     
