--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,12 +23,7 @@ section {
 textarea {
   resize: vertical;
 }
-.center {
-  text-align: center;
-  h1 {
-    margin-bottom: 10px;
-  }
-}
+
 
 /* typography */
 
@@ -42,6 +37,21 @@ h1 {
   margin-bottom: 20px;
   color: $grayLight;
   font-weight: normal;
+  &.day, &.week {
+    margin: 0px 0px 10px -30px;
+    color: white;
+    border-radius: 5px;
+    padding: 10px 10px 10px 35px;
+  }
+  &.week {
+    margin: 0px 0px 10px 0px;
+    padding: 10px;
+    text-align:center;
+    a {
+      color: #fff;
+      text-decoration: none;
+    }
+  } 
 }
 
 h2 {
@@ -56,6 +66,12 @@ p {
   font-size: 1.1em;
   line-height: 1.7em;
   margin-bottom: 30px;
+}
+
+/* buttons */
+
+.btn {
+  background-image: none;
 }
 
 /* header */
@@ -141,29 +157,8 @@ footer ul li {
   .back-btn {
     width: 100px;
   }
-  
-  label {
-    clear:both;
-  }
-  
-  #pain_entry_occured_at, #therapy_entry_occured_at{
-    width: 120px;
-    float: left;
-  }
-  #pain_entry_date_1i, #therapy_entry_date_1i{
+  .submit {
     clear: both;
-    width: 80px;
-    float: left;
-  }
-  #pain_entry_date_2i, #therapy_entry_date_2i {
-    width: 120px;
-    float: left;
-    margin-left: 10px;
-  }
-  #pain_entry_date_3i, #therapy_entry_date_3i  {
-    width: 50px;
-    float: left;
-    margin-left: 10px;
   }
 }
 /* tables */
@@ -172,13 +167,24 @@ footer ul li {
 
 /* wells */
 .greybox {
+  border: solid 1px #ddd;
   background: #f9f9f9;
   border-radius: 5px;
+  padding-bottom: 10px;
   margin-bottom: 20px;
   h2 {
     clear:both;
     margin: 20px 5px 0px;
   }
+}
+.week-box {
+  min-height: 200px;
+  background: #f9f9f9;
+  padding: 10px;
+  border: solid 1px #ddd;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  
 }
 
 
