--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -13,7 +13,7 @@
                 %ul.dropdown-menu
                   %li= link_to "Benutzer", users_path
             .btn-group    
-              -if can? :read, current_user
+              -if can? :show, current_user
                 = link_to "Profil", user_path(current_user), class: "btn"
               - if can? :edit, current_user
                 = link_to "Einstellungen", edit_user_path(current_user), class: "btn"
