--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,12 +24,13 @@
           <%= yield %>
         </div>
       </div>
-
       <div class="row">
         <div class="span12">
           <%= render "layouts/footer" %>
         </div>
       </div>
+      <%= debug(params) %>
+      
     </div>
 </body>
 </html>
