--- a/app/views/shared/_sidebar.html.haml
+++ b/app/views/shared/_sidebar.html.haml
@@ -1,6 +1,7 @@
 .left-nav
   %ul.nav.nav-pills.nav-stacked
-    %li{ :class => periodicals_action?(:day) ?  'active' : "" }= link_to "Dein Tag", "/periodicals/day"
-    %li{ :class => periodicals_action?(:week) ?  'active' : "" }= link_to "Deine Woche", "/periodicals/week"
-    %li{ :class => periodicals_action?(:month) ?  'active' : "" }= link_to "Dein Monat", "/periodicals/month"
-    %li{ :class => periodicals_action?(:year) ?  'active' : "" }= link_to "Dein Jahr", "/periodicals/year"
+    - t = Time.new
+    %li{ :class => periodicals_action?(:day) ?  'active' : "" }= link_to "Dein Tag", day_path(t.to_date)
+    %li{ :class => periodicals_action?(:week) ?  'active' : "" }= link_to "Deine Woche", week_path(t.to_date)
+    %li{ :class => periodicals_action?(:month) ?  'active' : "" }= link_to "Dein Monat", month_path(t.month, t.year)
+    %li{ :class => periodicals_action?(:year) ?  'active' : "" }= link_to "Dein Jahr", year_path(t.year)
