fix headers, clean up css

--- a/app/views/pain_entries/new.html.haml
+++ b/app/views/pain_entries/new.html.haml
@@ -1,4 +1,6 @@
-.row.greybox
-  .span9    
-    %h1 Neuer Schmerzeintrag
+.row
+  .span9
+    %h1.form Neuer Schmerzeintrag
+.row
+  .span9.greybox
     = render 'form'
