--- a/app/views/therapy_entries/new.html.haml
+++ b/app/views/therapy_entries/new.html.haml
@@ -1,6 +1,6 @@
 .row
   .span9
-    %h1.form Behandlungseintrag bearbeiten
+    %h1.form Neuer Behandlungseintrag
 .row
   .span9.greybox    
     = render 'form'
