--- a/app/views/pain_entries/edit.html.haml
+++ b/app/views/pain_entries/edit.html.haml
@@ -1,3 +1,6 @@
-%h1 Schmerzeintrag bearbeiten
-
-= render 'form'
+.row
+  .span9
+    %h1.form Schmerzeintrag bearbeiten
+.row
+  .span9.greybox
+    = render 'form'
