--- a/app/views/pain_entries/_form.html.haml
+++ b/app/views/pain_entries/_form.html.haml
@@ -3,6 +3,8 @@
   
   = f.label :occured_at
   = f.select :occured_at, ["nachts", "morgens", "vormittags", "mittags", "nachmittags", "abends"]
+  
+  = f.label :date
   = f.date_select :date
   
   = f.label :body_part
@@ -23,7 +25,8 @@
   = f.label :comment
   = f.text_area :comment, :rows => "5"
 
-
-  = f.submit "Speichern", class: "btn btn-primary btn-large"
-  = link_to 'Back', root_path, class: "btn btn-large back-btn"
-  
+  .btn-group
+    = link_to 'Zurück', root_path, class: "btn btn-large"
+    = f.submit "Speichern", class: "btn btn-primary btn-large"
+    
+ 
